--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.59.8",
     "react-native-elements": "^1.1.0",
     "react-native-extended-stylesheet": "^0.11.2",
+    "react-native-gesture-handler": "^1.2.2",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
