--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
-    "react-test-renderer": "16.8.3"
+    "react-test-renderer": "16.8.3",
+    "redux-logger": "^3.0.6"
   },
   "jest": {
     "preset": "react-native"
