--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.5.1",
     "axios": "^0.18.0",
     "moment": "^2.24.0",
     "react": "16.8.3",
